--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Breathing Shape</title>
+    <title>Breathing Shapes</title>
 
     <style>
         * {
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
         }
 
         html,
@@ -23,10 +24,39 @@
             height: calc(100vh + 48px);
             border: none;
         }
+
+        .alert {
+            display: none;
+        }
+
+        @media (max-width: 992px) {
+            .alert {
+                display: block;
+                position: fixed;
+                width: 100%;
+                height: 100vh;
+                background-color: rgba(255, 0, 0, 0.9);
+                color: #FFF;
+                z-index: 100;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                text-transform: uppercase;
+                font-family: Arial, Helvetica, sans-serif;
+                letter-spacing: .03em;
+                padding: 2rem;
+                font-size: 1.5rem;
+                text-align: center;
+            }
+        }
     </style>
 </head>
 
 <body>
+
+    <div class="alert">
+        Please open me on a desktop :)
+    </div>
 
 
     <iframe
